made some changes to the logic

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Invoice.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
     <title>Invoice</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -31,6 +33,7 @@
       </section>
 
       <!-- Itemized List -->
+       <section class="table-container">
       <table class="invoice-table">
         <thead>
           <tr>
@@ -52,6 +55,8 @@
           <!-- Add more rows as needed -->
         </tbody>
       </table>
+      <span class="material-symbols-outlined" id="addBtn"> add_circle</span>
+      </section>
 
       <!-- Totals Section -->
       <section class="total-section">
