--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Invoice.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
 
     <title>Invoice</title>
     <link rel="stylesheet" href="styles.css" />
@@ -33,49 +36,57 @@
       </section>
 
       <!-- Itemized List -->
-       <section class="table-container">
-      <table class="invoice-table">
-        <thead>
-          <tr>
-            <th>S/N</th>
-            <th>Item Description</th>
-            <th>Qty</th>
-            <th>Unit Price</th>
-            <th>Total Price</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td contenteditable="true">1</td>
-            <td contenteditable="true">Laser Alignment on Platform</td>
-            <td contenteditable="true">2</td>
-            <td contenteditable="true">500000</td>
-            <td contenteditable="true">1,000,000</td>
-          </tr>
-          <!-- Add more rows as needed -->
-        </tbody>
-      </table>
-      <span class="material-symbols-outlined" id="addBtn"> add_circle</span>
+      <section class="table-container">
+        <table class="invoice-table">
+          <thead>
+            <tr>
+              <th>S/N</th>
+              <th>Item Description</th>
+              <th>Qty</th>
+              <th>Unit Price</th>
+              <th>Total Price</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td contenteditable="true">1</td>
+              <td contenteditable="true">Laser Alignment on Platform</td>
+              <td contenteditable="true">2</td>
+              <td contenteditable="true">500000</td>
+              <td contenteditable="true">1,000,000</td>
+            </tr>
+            <!-- Add more rows as needed -->
+          </tbody>
+        </table>
+        <span class="material-symbols-outlined btn-one addBtn" > add_circle</span>
+        <span class="material-symbols-outlined btn-two addBtn" > add_circle</span>
       </section>
 
       <!-- Totals Section -->
       <section class="total-section">
         <div class="totals">
-          <p>Subtotal: <span id="subtotal">1,000,000</span></p>
-          <p>VAT (7.5%): <span id="vat">75,000</span></p>
-          <p>
-            <strong
-              >Grand Total: <span id="grand-total">1,075,000</span></strong
-            >
-          </p>
+          <div class="numwords-container">
+            <p class="numwords">
+              <strong>In Words:</strong>
+              <span id="numToWords"
+                >One Million Seventy-Five Thousand Naira Only</span
+              >
+            </p>
+          </div>
+
+          <div class="calculations-container">
+            <p>Subtotal: <span id="subtotal">1,000,000</span></p>
+            <p>VAT (7.5%): <span id="vat">75,000</span></p>
+            <p>
+              <strong
+                >Grand Total: <span id="grand-total">1,075,000</span></strong
+              >
+            </p>
+          </div>
         </div>
 
         <!-- Additional Notes and Signature -->
         <div class="notes-signature">
-          <p>
-            <strong>In Words:</strong> One Million Seventy-Five Thousand Naira
-            Only
-          </p>
           <p>Authorized Signature: _____________________</p>
         </div>
       </section>
@@ -83,7 +94,7 @@
       <!-- Print Button -->
       <button onclick="window.print()">Print Invoice</button>
     </main>
-
+    <script src="https://cdn.jsdelivr.net/npm/number-to-words"></script>
     <script src="invoice.js"></script>
   </body>
 </html>
