--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hydrocarbon</title>
   </head>
